--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,8 @@ branches:
     - /.+-stable$/
 
 before_install:
-  # There is a bug in travis. When using system ruby, bundler is not
-  # installed and causes the default install action to fail.
-  - if [ "$TRAVIS_RUBY_VERSION" = "system" ]; then sudo gem install "bundler:~> 1.17"; else gem install "bundler:~> 1.17"; fi
+  # See https://docs.travis-ci.com/user/languages/ruby/#bundler-20.
+  - if [ "$TRAVIS_RUBY_VERSION" = "system" ]; then sudo gem install bundler; else gem install bundler; fi
   # RubyGems 2.0.14 isn't a fun time on 2.0.0p648
   - if [ "$TRAVIS_RUBY_VERSION" = "system" ]; then sudo gem update --system; fi
 
